[Fix] Table - overflow & min-width issues

--- a/src/sass/_parts/heading.sass
+++ b/src/sass/_parts/heading.sass
@@ -7,6 +7,7 @@
 		align-content: stretch
 		width: 100%
 		border-bottom: 1px solid $divider
+		box-sizing: border-box
 
 		&-cell
 			flex: auto
